--- a/src/app/module/review/review.component.scss
+++ b/src/app/module/review/review.component.scss
@@ -5,8 +5,6 @@
   
   *, *:before, *:after {
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
   }
   
   body {
@@ -43,7 +41,7 @@
       width: $contW;
       padding: $contPad;
       padding-bottom: $contPad + 65px;
-      background: #fff;
+      // background: #fff;
       
       &__inner {
         position: relative;
