--- a/src/app/module/infobytes/infobytes.component.html
+++ b/src/app/module/infobytes/infobytes.component.html
@@ -359,7 +359,7 @@
                         </a>
                         <div class="row">
                             <a class="button button-primary button-shadow button-md button-xxl btn-grad  animate__delay-5s 5s" href="javascript:void(0);">Request a Callback</a>
-                            <a class="button button-primary button-shadow button-md button-xxl btn-grad kkall animate__delay-5s 5s" routerLink="/online-consultation" [queryParams]="{limit: 10, skip: 0 }">Book An Appointment</a>
+                            <a class="button button-primary button-shadow button-md button-xxl btn-grad kkall animate__delay-5s 5s" routerLink="/web-panel/online-consultation" [queryParams]="{limit: 10, skip: 0 }">Book An Appointment</a>
                         </div>
                     </div>
                 </div>
