--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -51,10 +51,10 @@
                         <h2 class="footer-title ">For Patients</h2>
                         <ul>
                             <!-- <li><a href="search.html ">Search for Clinics</a></li> -->
-                            <li><a (click)="patientRouter('login', 'login-modal', '/index', 'user')" href="javascript:void(0); ">Login</a></li>
-                            <li><a (click)="patientRouter('signup', 'login-modal', '/index', 'user')" href="javascript:void(0);">Register</a></li>
-                            <li><a (click)="patientRouter('booking', 'login-modal', '/online-consultation?limit=10&skip=0', 'user')" href="javascript:void(0);">Booking Appointment</a></li>
-                            <li><a (click)="patientRouter('patientDash', 'login-modal', '/patient-panel/patient-dashboard', 'user')" href="javascript:void(0);">Patient Dashboard</a></li>
+                            <li><a (click)="patientRouter('login', 'login-modal', '/web-panel/index', 'user')" href="javascript:void(0); ">Login</a></li>
+                            <li><a (click)="patientRouter('signup', 'login-modal', '/web-panel/index', 'user')" href="javascript:void(0);">Register</a></li>
+                            <li><a (click)="patientRouter('booking', 'login-modal', '/web-panel/online-consultation?limit=10&skip=0', 'user')" href="javascript:void(0);">Booking Appointment</a></li>
+                            <li><a (click)="patientRouter('patientDash', 'login-modal', '/web-panel/patient-panel/patient-dashboard', 'user')" href="javascript:void(0);">Patient Dashboard</a></li>
                             <app-login-modal></app-login-modal>
                         </ul>
                     </div>
@@ -68,11 +68,11 @@
                     <div class="footer-widget footer-menu ">
                         <h2 class="footer-title ">For Dentist</h2>
                         <ul>
-                            <li><a (click)="densitRouter('appointment', 'login-modal', '/doctors-panel/doctor-appointments', 'onlineDoctors')" href="javascript:void(0);">Appointments</a></li>
+                            <li><a (click)="densitRouter('appointment', 'login-modal', '/web-panel/doctors-panel/doctor-appointments', 'onlineDoctors')" href="javascript:void(0);">Appointments</a></li>
                             <!-- <li><a href="chat.html ">Chat</a></li> -->
-                            <li><a (click)="densitRouter('login', 'login-modal', '/index', 'onlineDoctors')" href="javascript:void(0);">Login</a></li>
-                            <li><a (click)="densitRouter('signup', 'login-modal', '/index', 'onlineDoctors')" href="javascript:void(0);">Register</a></li>
-                            <li><a (click)="densitRouter('doctorDash', 'login-modal', '/doctor-dashboard', 'onlineDoctors')" href="javascript:void(0);">Dentist Dashboard</a></li>
+                            <li><a (click)="densitRouter('login', 'login-modal', '/web-panel/index', 'onlineDoctors')" href="javascript:void(0);">Login</a></li>
+                            <li><a (click)="densitRouter('signup', 'login-modal', '/web-panel/index', 'onlineDoctors')" href="javascript:void(0);">Register</a></li>
+                            <li><a (click)="densitRouter('doctorDash', 'login-modal', '/web-panel/doctor-dashboard', 'onlineDoctors')" href="javascript:void(0);">Dentist Dashboard</a></li>
                         </ul>
                     </div>
                     <!-- /Footer Widget -->
@@ -125,7 +125,7 @@
                         <!-- Copyright Menu -->
                         <div class="copyright-menu ">
                             <ul class="policy-menu ">
-                                <li><a (click)="footerRouter('/covid-guidelines')" href="javascript:void(0);">Covid 19 Information</a></li>
+                                <li><a (click)="footerRouter('/web-panel/covid-guidelines')" href="javascript:void(0);">Covid 19 Information</a></li>
                                 <li><a href="#">Terms</a></li>
                                 <li><a href="#">Privacy Policy</a></li>
                             </ul>
