--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -17,7 +17,7 @@
                     <span></span>
                     </span>
                 </a>
-                <a href="/index" class="navbar-brand logo">
+                <a href="/web-panel/index" class="navbar-brand logo">
                     <img src="assets/img/logo.png" class="img-fluid" alt="Logo">
                 </a>
             </div>
