--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -159,22 +159,22 @@
                         </div>
                         <button class="btn btn-primary btn-lg btn-grad login-btn" type="submit">Login</button>
 
-                        <!-- <div class="login-or">
+                        <div class="login-or">
                             <span class="or-line"></span>
                             <span class="span-or">or</span>
                         </div>
                         <div class="row form-row social-login">
                             <div class="col-6">
-                                <a href="#" class="btn btn-facebook btn-block">
+                                <a href="javascript:void(0);" class="btn btn-facebook btn-block">
                                     <i class="fab fa-facebook-f mr-1"></i> Login
                                 </a>
                             </div>
                             <div class="col-6">
-                                <a href="#" class="btn btn-google btn-block">
+                                <a href="javascript:void(0);" class="btn btn-google btn-block" (click)="signInWithGoogle()">
                                     <i class="fab fa-google mr-1"></i> Login
                                 </a>
                             </div>
-                        </div> -->
+                        </div>
                         <div class="text-center dont-have">Don’t have an account?
                             <a href="javascript:void(0);" (click)="signup()">Register</a>
                         </div>
