--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -159,7 +159,7 @@
                         </div>
                         <button class="btn btn-primary btn-lg btn-grad login-btn" type="submit">Login</button>
 
-                        <div class="login-or">
+                        <!-- <div class="login-or">
                             <span class="or-line"></span>
                             <span class="span-or">or</span>
                         </div>
@@ -174,7 +174,7 @@
                                     <i class="fab fa-google mr-1"></i> Login
                                 </a>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="text-center dont-have">Don’t have an account?
                             <a href="javascript:void(0);" (click)="signup()">Register</a>
                         </div>
